# AI

./: .gitignore
AI_mixing/: .gitignore  README.md  pyproject.toml
AI_mixing/src/mixsense_mixing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
AI_recommend/: README.md
